change name script to app

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root"><h1>My name is harsahl</h1></div>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="App.js"></script>
   </body>
 </html>
